RESOLVED FIXED 60298
Calling layoutTestController.dumpAsText(true) in WebKitTestRunner doesn't result in pixel results being generated
https://bugs.webkit.org/show_bug.cgi?id=60298
Summary Calling layoutTestController.dumpAsText(true) in WebKitTestRunner doesn't res...
Adam Roben (:aroben)
Reported 2011-05-05 14:24:34 PDT
Calling layoutTestController.dumpAsText(true) in WebKitTestRunner doesn't result in pixel results being generated
Attachments
Add support for layoutTestController.dumpAsText(true) to WebKitTestRunner (8.70 KB, patch)
2011-05-05 14:26 PDT, Adam Roben (:aroben)
sam: review+
Adam Roben (:aroben)
Comment 1 2011-05-05 14:26:12 PDT
Created attachment 92466 [details] Add support for layoutTestController.dumpAsText(true) to WebKitTestRunner
Adam Roben (:aroben)
Comment 2 2011-05-05 15:07:27 PDT
Note You need to log in before you can comment on or make changes to this bug.