Add support for layoutTestController.dumpAsText(true) to WebKitTestRunner

Passing true tells the test harness to dump pixels even though we're not dumping a render
tree.

Fixes <http://webkit.org/b/60298> Calling layoutTestController.dumpAsText(true) in
WebKitTestRunner doesn't result in pixel results being generated

Reviewed by Sam Weinig.

* WebKitTestRunner/InjectedBundle/Bindings/LayoutTestController.idl: Added dumpPixels
argument to dumpAsText.

* WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:
(WTR::InjectedBundlePage::dump): Updated for dumpAsText change.

* WebKitTestRunner/InjectedBundle/LayoutTestController.cpp:
(WTR::LayoutTestController::dumpAsText): Store the dumpPixels argument.

* WebKitTestRunner/InjectedBundle/LayoutTestController.h: Updated for IDL change.

* WebKitTestRunner/win/InjectedBundle.vcproj: Added .idl files as a convenience for Windows
developers.

Canonical link: https://commits.webkit.org/75570@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85888 268f45cc-cd09-0410-ab3c-d52691b4dbfc